# cwe2

./: CHANGELOG.rst  Makefile  README.rst  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
docs/source/: conf.py
src/cwe2/: __init__.py  categories.py  database.py  mappings.py  weakness.py
src/cwe2/database/: 1000.csv.ABOUT  1194.csv.ABOUT  1344.csv.ABOUT  1387.csv.ABOUT  699.csv.ABOUT  cwe.NOTICE
src/cwe2/database_v49/: __init__.py  cwe.ABOUT
src/cwe2/database_v49/external_mappings/: 1008.csv  1133.csv  1154.csv  1178.csv  1305.csv  1340.csv  1343.csv  1344.csv  1358.csv  1387.csv  1424.csv  1425.csv  700.csv  888.csv
src/cwe2/database_v49/helpful_views/: 1003.csv  1040.csv  1081.csv  2000.csv  604.csv  658.csv  659.csv  660.csv  661.csv  677.csv  678.csv  701.csv  702.csv  709.csv  884.csv  919.csv
src/cwe2/database_v49/navigate_cwe/: 1000.csv  1194.csv  699.csv
src/cwe2/database_v49/obsolete_views/: 1026.csv  1128.csv  1200.csv  1337.csv  1350.csv  1387.csv  629.csv  635.csv  711.csv  734.csv  750.csv  800.csv  809.csv  844.csv  868.csv  900.csv  928.csv
tests/: test_cwe.py  test_skeleton_codestyle.py
