[metadata]
name = cwe2
license = MIT and LicenseRef-scancode-cwe-tou

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = cwe2 is a CWE common weakness enumeration library for Python
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/cwe2

author = Ziad Hany, nexB. Inc. and others. Originally based on Julian Nash cwe.
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities
    CWE
    weakness
    CVE
    vulnerabilities

license_files =
    mit.LICENSE
    cwe-tou.LICENSE
    CHANGELOG.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

install_requires =
    importlib_resources>=5.10.2

[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    # Validation
    pycodestyle>=2.8.0
    black>=22.3.0
    isort>=5.10.1
    doc8>=0.11.1

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2

